tests/res/resolution/duplicate_fn_type.say
// A function and a type sharing a name collide: both are items, which stay unique.
fn foo() { return 1; }
type foo { init() {} } // error: 'foo' already declared in this scope
